piano finalizado e sons dos cards selecionados

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -31,7 +31,7 @@
             <h2 class="textSelectYourInstrument">Selecione seu instrumento preferido</h2>
             <div class="contentYourInstrument">
 
-                <label class="cardYourInstruments">
+                <label id="card1" class="cardYourInstruments">
                     <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="1"
                         type="radio" checked>
                     <span class="contentCardYourInstruments">
@@ -44,7 +44,7 @@
                     </span>
                 </label>
 
-                <label class="cardYourInstruments">
+                <label id="card2" class="cardYourInstruments">
                     <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="2"
                         type="radio">
                     <span class="contentCardYourInstruments">
@@ -56,7 +56,8 @@
                         </span>
                     </span>
                 </label>
-                <label class="cardYourInstruments">
+
+                <label id="card3" class="cardYourInstruments">
                     <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="3"
                         type="radio">
                     <span class="contentCardYourInstruments">
@@ -68,7 +69,8 @@
                         </span>
                     </span>
                 </label>
-                <label class="cardYourInstruments">
+
+                <label id="card4" class="cardYourInstruments">
                     <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="4"
                         type="radio">
                     <span class="contentCardYourInstruments">
@@ -80,7 +82,8 @@
                         </span>
                     </span>
                 </label>
-                <label class="cardYourInstruments">
+
+                <label id="card5" class="cardYourInstruments">
                     <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="5"
                         type="radio">
                     <span class="contentCardYourInstruments">
@@ -92,7 +95,8 @@
                         </span>
                     </span>
                 </label>
-                <label class="cardYourInstruments">
+
+                <label id="card6" class="cardYourInstruments">
                     <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="6"
                         type="radio">
                     <span class="contentCardYourInstruments">
@@ -104,7 +108,8 @@
                         </span>
                     </span>
                 </label>
-                <label class="cardYourInstruments">
+
+                <label id="card7" class="cardYourInstruments">
                     <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="7"
                         type="radio">
                     <span class="contentCardYourInstruments">
@@ -116,7 +121,8 @@
                         </span>
                     </span>
                 </label>
-                <label class="cardYourInstruments">
+
+                <label id="card8" class="cardYourInstruments">
                     <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="8"
                         type="radio">
                     <span class="contentCardYourInstruments">
@@ -128,7 +134,8 @@
                         </span>
                     </span>
                 </label>
-                <label class="cardYourInstruments">
+
+                <label id="card9" class="cardYourInstruments">
                     <input name="itemInstruments" class="radioYourInstruments" id="inputInstrumento" value="9"
                         type="radio">
                     <span class="contentCardYourInstruments">
@@ -408,3 +415,4 @@
     // }
 
 </script>
+<script src="js/jsCardSignUp/soundsCardSignUp.js"></script>
