--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -40,7 +40,7 @@
         <div class="divBannerDash">
             <div class="divImgBanner">
                 <h2>Experimente Nosso Simulador</h2>
-                <p>Um Simulador para você experimentar como é ser um violonista.</p>
+                <p>Um Simulador para você experimentar como é ser um Pianista.</p>
                 <button class="btnBanner"><a href="piano.instruments.html"><img src="../assets/imgsDash/right-arrow.png" alt=""></a></button>
             </div>
             <div class="divGoCommunity">
