--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                         <a class="activeLi" href="">
                             <li>Home</li>
                         </a>
-                        <a href="">
+                        <a href="login.html">
                             <li>Simulador</li>
                         </a>
                         <a href="login.html">
@@ -60,7 +60,7 @@
 
             <div class="buttons">
                 <button class="btnGradient"><a href="login.html">Comunidade</a></button>
-                <button class="btnSimulador"><img src="assets/imgs/Polygon 1.png" alt=""> Simulador</button>
+                <button onclick="openLogin()" class="btnSimulador"><img src="assets/imgs/Polygon 1.png" alt=""> Simulador</button>
             </div>
         </div>
 
@@ -160,29 +160,3 @@
 </html>
 
 <script src="js/jsInStyles/toggleCardBenefits.js"></script>
-
-<script>
-    // document.getElementById("mymusic").addEventListener("mouseenter",function(link){
-    //     console.log("teste")
-    // })
-    function openLink(link) {
-        return window.open(link, "_blank")
-    }
-    function open1() {
-        openLink(`https://www.youtube.com/watch?v=8JUhqc2Z838`)
-    }
-
-    function open2() {
-        openLink(`https://www.youtube.com/watch?v=kEYWp8FJfRc`)
-    }
-    function open3() {
-        openLink(`https://www.youtube.com/watch?v=I2rSsaCPkwM`)
-    }
-    function open4() {
-        openLink(`https://www.youtube.com/watch?v=pwEm2QNWYQo`)
-    }
-    function open5() {
-        openLink(`https://www.youtube.com/watch?v=Ou8zCdy49LE`)
-    }
-
-</script>
